--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,9 @@ javafx {
 }
 
 dependencies {
+    implementation 'org.openjfx:javafx-controls:21'
+    implementation 'org.openjfx:javafx-fxml:21'
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
-
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
