--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.javamodularity.moduleplugin' version '1.8.12'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group 'com.project'
@@ -13,20 +11,28 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    junitVersion = '5.10.0'
-}
+dependencies {
+    // JavaFX
+    implementation 'org.openjfx:javafx-controls:19'
+    implementation 'org.openjfx:javafx-fxml:19'
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
+    // Hibernate
+    implementation 'org.hibernate.orm:hibernate-core:6.4.1.Final'
+    implementation 'org.hibernate.orm:hibernate-c3p0:6.4.1.Final'
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
+    // Jakarta Persistence
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'
 
-application {
-    mainModule = 'com.project.cwmsgradle'
-    mainClass = 'com.project.cwmsgradle.HelloApplication'
+    implementation 'org.postgresql:postgresql:42.5.4' // Ensure this line is included
+
+    // Logging
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'ch.qos.logback:logback-classic:1.4.11'
+
+    // Testing
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 }
 
 javafx {
@@ -34,26 +40,10 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
-dependencies {
-    implementation 'org.openjfx:javafx-controls:21'
-    implementation 'org.openjfx:javafx-fxml:21'
-    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+application {
+    mainClass = 'com.project.cwmsgradle.mainApp'
 }
 
 test {
     useJUnitPlatform()
-}
-
-jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'app'
-    }
-}
-
-jlinkZip {
-    group = 'distribution'
 }
